--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "lunacal-assignment",
   "version": "1.0.0",
   "private": true,
-  "description": "",
+  "description": "React UI components with AboutMe and Gallery widgets",
   "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "tailwind.config.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -16,12 +13,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.3.2"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
   },
   "browserslist": {
     "production": [
